fix: header font size on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,6 +16,7 @@ Main color: #0060A1;
 
 	#header h2 {
 		line-height: 70px;
+		font-size: 45px;
 	}
 }
 
@@ -27,6 +28,7 @@ Main color: #0060A1;
 
 	#header h2 {
 		line-height: 50px;
+		font-size: x-large;
 	}
 
 	.img-pecet {
@@ -36,7 +38,6 @@ Main color: #0060A1;
 
 	.logo-gh {
 		height: 45px;
-		background-image: url("../img/logo_znak.png");
 	}
 }
 
@@ -77,7 +78,6 @@ hr {
 #header h2 {
 	color: white;
 	font-weight: bold;
-	font-size: 45px;
 }
 
 .logo {
